Wiring up Guice support as discussed in SHINDIG-152.
This is a very significant change for anyone who has maintained customized implementations of any of the core Shindig classes, but it greatly simplifies the task of extending te server. 

This patch also incorporates Brian Eaton's signing interface improvements discussed in SHINDIG-157.



git-svn-id: https://svn.apache.org/repos/asf/incubator/shindig/trunk@644123 13f79535-47bb-0310-9956-ffa450edef68